fix: add min width for counter and when count time is zero after chaning is visible immediately

--- a/editor-components/coming-soon/coming-soon1/coming-soon1.module.scss
+++ b/editor-components/coming-soon/coming-soon1/coming-soon1.module.scss
@@ -49,6 +49,7 @@
                 flex-direction: column;
                 gap: var(--composer-gap-md);
                 align-items: center;
+                min-width: 65px;
                 .days-count,.hours-count, .minutes-count, .seconds-count{
                     color: var(--composer-font-color-primary);
                     margin: 0px;
